Updated transactions controller
