# src/routes/transactions.js
@@ -2,6 +2,8 @@ const express = require("express");
 const {
   getTransactions,
   createTransaction,
+  updateTransaction,
+  deleteTransaction,
 } = require("../controller/transactions");
 
 const router = express.Router();
@@ -9,5 +11,9 @@ const router = express.Router();
 router.get("/", getTransactions);
 
 router.post("/", createTransaction);
+
+router.put("/:id", updateTransaction);
+
+router.delete("/:id", deleteTransaction);
 
 module.exports = router;
